<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/samplingRateText"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/samplingFrequencyTextView"
                android:gravity="center_vertical"/>
            <SeekBar
                android:id="@+id/samplingRateSeekbar"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:max="8"
                android:visibility="gone"
                android:progress="8"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/frameRate"/>
            <EditText
                android:id="@+id/frameSize"
                android:text="@string/frameSize"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/decisionRate" />

            <EditText
                android:id="@+id/decisionRate"
                android:text="@string/smoothingBufferSize"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/quietAdjustmentText"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/quietAdjustment"/>
            <SeekBar
                android:id="@+id/quietAdjustmentSeekbar"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:max="200"
                android:progress="60"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/playAudio"/>
            <Switch
                android:id="@+id/switchPlayAudio"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:checked="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/storeFeatures"/>
            <Switch
                android:id="@+id/switchStoreFeatures"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_width="0dip"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/settingsLayout"
        android:layout_alignLeft="@+id/settingsLayout"
        android:layout_alignStart="@+id/settingsLayout"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vadoutput"
            android:gravity="center"/>
        <TextView
            android:id="@+id/noiseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noise"/>
        <TextView
            android:id="@+id/speechLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/speech"/>
        <TextView
            android:id="@+id/quietLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiet"/>

        <TextView
            android:id="@+id/noiseClassifierLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Noise Classifier Output:"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/frameProcessingTime"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:id="@+id/linearLayout2">



        <TextView
            android:id="@+id/noiseClassifierStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.54"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical" />

    </LinearLayout>
    <TextView
        android:text="@string/processingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/dBPower"
        android:id="@+id/frameProcessingTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_margin="5dp"/>
    <TextView
        android:text="@string/dbpower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonLayout"
        android:id="@+id/dBPower"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="0.99"
        android:layout_above="@+id/copyright"
        android:layout_alignLeft="@+id/dBPower"
        android:layout_alignStart="@+id/dBPower">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStart"
            android:onClick="onStartClick"
            android:layout_weight="0.33"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/readButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRead"
            android:onClick="onReadClick"
            android:layout_weight="0.33"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/stopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStop"
            android:onClick="onStopClick"
            android:layout_weight="0.33"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/copyright"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:gravity="right"/>
    </LinearLayout>




</RelativeLayout>
